--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <parent>
             <groupId>org.n52</groupId>
             <artifactId>parent</artifactId>
-            <version>18</version>
+            <version>19</version>
         </parent>
 	<groupId>org.n52.geoprocessing</groupId>
 	<artifactId>wps-client-lib</artifactId>
@@ -30,11 +30,11 @@
 	<inceptionYear>2017</inceptionYear>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<slf4j.version>1.7.28</slf4j.version>
-		<arctic-sea.version>7.2.0</arctic-sea.version>
+		<slf4j.version>1.7.30</slf4j.version>
+		<arctic-sea.version>7.3.1</arctic-sea.version>
 		<common-xml.version>2.3.0</common-xml.version>
 		<logback.version>1.0.13</logback.version>
-		<javaps.version>1.4.0</javaps.version>
+		<javaps.version>1.5.0</javaps.version>
 		<org.springframework.version>4.1.6.RELEASE</org.springframework.version>
 		<org.spring-security.version>4.0.1.RELEASE</org.spring-security.version>
 		<maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
@@ -112,12 +112,12 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-configuration2</artifactId>
-			<version>2.3</version>
+			<version>2.7</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.10.3</version>
+			<version>2.10.3</version>
 			<exclusions>
 				<exclusion>
 					<groupId>com.fasterxml.jackson.core</groupId>
@@ -166,6 +166,10 @@
 					<groupId>org.apache.httpcomponents</groupId>
 					<artifactId>httpcore</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.quartz-scheduler</groupId>
+					<artifactId>quartz</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -200,6 +204,10 @@
 				<exclusion>
 					<groupId>com.fasterxml.jackson.core</groupId>
 					<artifactId>jackson-databind</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.apache.commons</groupId>
+					<artifactId>commons-configuration2</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -308,11 +316,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-                <dependency>
-                    <groupId>org.hamcrest</groupId>
-                    <artifactId>hamcrest-core</artifactId>
-                    <version>1.3</version>
-                </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+         </dependency>
 	</dependencies>
 	
 	<repositories>		
